multicolor overlay - picture captions added

--- a/multi_color_overlay.html
+++ b/multi_color_overlay.html
@@ -112,7 +112,7 @@
 					the context around the new feature, who needs it and why.</p>
 
 				<div class="gallery">
-					<a class="fancybox" rel="group" title="Original mockup" href="img/network_overlay/1.original_proposal.png"><img class="gallery1" id="network_overlay_1" src="img/network_overlay/1.original_proposal.png" alt="" /></a>
+					<a class="fancybox" rel="group" title="Original mockup, the starting point" href="img/network_overlay/1.original_proposal.png"><img class="gallery1" id="network_overlay_1" src="img/network_overlay/1.original_proposal.png" alt="" /></a>
 				</div>
 
 				<p>The problem came down to helping users find interesting patterns in their complex data coming from
@@ -138,8 +138,8 @@
 					alone was not enough.</p>
 
 				<div class="gallery">
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/network_overlay/A4%204x8%20grid%201.png"><img class="gallery2 left_image with_border" id="function_candidates_1" src="img/network_overlay/A4%204x8%20grid%201.png" alt="" /></a>
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/network_overlay/A4%204x8%20grid%202.png"><img class="gallery2 right_image with_border" id="function_candidates_1" src="img/network_overlay/A4%204x8%20grid%202.png" alt="" /></a>
+					<a class="fancybox" rel="group" title="Network overlay ideas" href="img/network_overlay/A4%204x8%20grid%201.png"><img class="gallery2 left_image with_border" id="function_candidates_1" src="img/network_overlay/A4%204x8%20grid%201.png" alt="" /></a>
+					<a class="fancybox" rel="group" title="Ideas for other components of the design" href="img/network_overlay/A4%204x8%20grid%202.png"><img class="gallery2 right_image with_border" id="function_candidates_1" src="img/network_overlay/A4%204x8%20grid%202.png" alt="" /></a>
 				</div>
 
                 <p>Starting from the original mock-up, I played with a lot of ideas on how to represent multiple dimensions
@@ -147,7 +147,7 @@
 					after combining different visualization types with color ranges, data points and labels.</p>
 
 				<div class="gallery">
-				<a class="fancybox" rel="group" title="bla bla bla" href="img/network_overlay/2.ideation_collage.png"><img class="gallery1" id="network_overlay_2" src="img/network_overlay/2.ideation_collage_4_no_margins.png" alt="" /></a>
+				<a class="fancybox" rel="group" title="Node level visualizations" href="img/network_overlay/2.ideation_collage.png"><img class="gallery1" id="network_overlay_2" src="img/network_overlay/2.ideation_collage_4_no_margins.png" alt="" /></a>
 				</div>
 
                 <p>We threw away a lot of ideas, but some of them survived and were tested in the context of a network
@@ -157,11 +157,11 @@
 					test either, although the last one needed more simplification since it was very heavy on the eye.</p>
 
                 <div class="gallery">
-				    <a class="fancybox" rel="group" title="bla bla bla" href="img/network_overlay/3.integration_test_bars.png"><img class="gallery2 left_image" id="network_overlay_3" src="img/network_overlay/3.integration_test_bars.png" alt="" /></a>
-				    <a class="fancybox" rel="group" title="bla bla bla" href="img/network_overlay/4.integration_test_sunburst.png"><img class="gallery2 right_image" id="network_overlay_4" src="img/network_overlay/4.integration_test_sunburst.png" alt="" /></a>
+				    <a class="fancybox" rel="group" title="Integration test with bar charts" href="img/network_overlay/3.integration_test_bars.png"><img class="gallery2 left_image" id="network_overlay_3" src="img/network_overlay/3.integration_test_bars.png" alt="" /></a>
+				    <a class="fancybox" rel="group" title="Integration test with bar sunbursts" href="img/network_overlay/4.integration_test_sunburst.png"><img class="gallery2 right_image" id="network_overlay_4" src="img/network_overlay/4.integration_test_sunburst.png" alt="" /></a>
 					<span class="gallery_separator"></span>
-					<a class="fancybox" rel="group" title="bla bla bla" href="img/network_overlay/5.integration_test_worms.png"><img class="gallery2 left_image" id="network_overlay_5" src="img/network_overlay/5.integration_test_worms.png" alt="" /></a>
-				    <a class="fancybox" rel="group" title="bla bla bla" href="img/network_overlay/6.integration_test_worms_simplified.png"><img class="gallery2 right_image" id="network_overlay_6" src="img/network_overlay/6.integration_test_worms_simplified.png" alt="" /></a>
+					<a class="fancybox" rel="group" title="Integration test with parallel coordinates charts" href="img/network_overlay/5.integration_test_worms.png"><img class="gallery2 left_image" id="network_overlay_5" src="img/network_overlay/5.integration_test_worms.png" alt="" /></a>
+				    <a class="fancybox" rel="group" title="Simplified version of the parallel coordinates charts" href="img/network_overlay/6.integration_test_worms_simplified.png"><img class="gallery2 right_image" id="network_overlay_6" src="img/network_overlay/6.integration_test_worms_simplified.png" alt="" /></a>
 				</div>
 
                 <p>The last piece of the puzzle was the exported image design, since the ultimate goal of the users was
@@ -170,8 +170,8 @@
 					emphasized on the network.</p>
 
                 <div class="gallery">
-                    <a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/network_overlay/7.export_1.png"><img class="gallery2 left_image with_border" id="function_candidates_1" src="img/network_overlay/7.export_1.png" alt="" /></a>
-                    <a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/network_overlay/7.export_2.png"><img class="gallery2 right_image with_border" id="function_candidates_1" src="img/network_overlay/7.export_2.png" alt="" /></a>
+                    <a class="fancybox" rel="group" title="Exported image for a single observation with multiple measurements" href="img/network_overlay/7.export_1.png"><img class="gallery2 left_image with_border" id="function_candidates_1" src="img/network_overlay/7.export_1.png" alt="" /></a>
+                    <a class="fancybox" rel="group" title="Exported image for multiple observations with a single measurement" href="img/network_overlay/7.export_2.png"><img class="gallery2 right_image with_border" id="function_candidates_1" src="img/network_overlay/7.export_2.png" alt="" /></a>
                 </div>
 
 				<h2>MOVING AWAY FROM THE NETWORK</h2>
@@ -184,7 +184,7 @@
 					the molecules measured during the experiments.</p>
 
                 <div class="gallery">
-                    <a class="fancybox" rel="group" title="bla bla bla" href="img/network_overlay/8.table_sparkline_variations.png"><img class="gallery1" id="network_overlay_2" src="img/network_overlay/8.table_sparkline_variations.png" alt="" /></a>
+                    <a class="fancybox" rel="group" title="Molecules table variations" href="img/network_overlay/8.table_sparkline_variations.png"><img class="gallery1" id="network_overlay_2" src="img/network_overlay/8.table_sparkline_variations.png" alt="" /></a>
                 </div>
 
 				<p>One of the most frequent issues with data analysis is the amount of data. We were expecting datasets
@@ -192,7 +192,7 @@
 					some automatically discovered patterns of interest. That was done by way of smart filtering.</p>
 
 				<div class="gallery">
-                    <a class="fancybox" rel="group" title="bla bla bla" href="img/network_overlay/10.molecules_table_filters.png"><img class="gallery1" id="network_overlay_2" src="img/network_overlay/10.molecules_table_filters.png" alt="" /></a>
+                    <a class="fancybox" rel="group" title="Molecules table filtering" href="img/network_overlay/10.molecules_table_filters.png"><img class="gallery1" id="network_overlay_2" src="img/network_overlay/10.molecules_table_filters.png" alt="" /></a>
                 </div>
 
 				<p>The dataset picker had also an important role in the design because it allowed selection of multiple
@@ -201,7 +201,7 @@
 					Those operations affected the visualizations from the table and network.</p>
 
 				<div class="gallery">
-                    <a class="fancybox" rel="group" title="bla bla bla" href="img/network_overlay/9.dataset_picker.png"><img class="gallery1center" id="network_overlay_2" src="img/network_overlay/9.dataset_picker.png" alt="" /></a>
+                    <a class="fancybox" rel="group" title="Dataset picker" href="img/network_overlay/9.dataset_picker.png"><img class="gallery1center" id="network_overlay_2" src="img/network_overlay/9.dataset_picker.png" alt="" /></a>
                 </div>
 
 				<h2>NETWORK OVERLAY</h2>
@@ -211,7 +211,7 @@
 				to allow publishing by simply exporting the view.</p>
 
 				<div class="gallery">
-					<a class="fancybox" rel="group" title="bla bla bla" href="img/network_overlay/11.chart.png"><img class="gallery1" id="network_overlay_2" src="img/network_overlay/11.chart.png" alt="" /></a>
+					<a class="fancybox" rel="group" title="Overlaying charts on the network" href="img/network_overlay/11.chart.png"><img class="gallery1" id="network_overlay_2" src="img/network_overlay/11.chart.png" alt="" /></a>
 				</div>
 
 				<p>The node charts came with some layout challenges since they needed to accommodate up to 20 bars. Since
