--- a/isoprofiler.html
+++ b/isoprofiler.html
@@ -159,9 +159,45 @@
 					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
 					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
 
-				<!--<div class="gallery">-->
-				<!--<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/function_candidates/1.png"><img class="gallery1" id="function_candidates_1" src="img/function_candidates/1.png" alt="" /></a>-->
-				<!--</div>-->
+				<div class="gallery">
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/dataset_view_1.png"><img class="gallery2 left_image" id="function_candidates_1" src="img/isoprofiler/dataset_view_1.png" alt="" /></a>
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/dataset_view_2.png"><img class="gallery2 right_image" id="function_candidates_1" src="img/isoprofiler/dataset_view_2.png" alt="" /></a>
+				    <p class="gallery_separator"></p>
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/dataset_view_3.png"><img class="gallery2 left_image" id="function_candidates_1" src="img/isoprofiler/dataset_view_3.png" alt="" /></a>
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/dataset_view_5.png"><img class="gallery2 right_image" id="function_candidates_1" src="img/isoprofiler/dataset_view_5.png" alt="" /></a>
+				</div>
+
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis lacus consectetur, feugiat tortor et,
+					condimentum nisl. Vestibulum pellentesque mauris non neque consequat, sit amet imperdiet metus rhoncus.
+					Morbi sit amet nisi vestibulum, laoreet est vel, pharetra purus. Vestibulum fringilla aliquam ante ac ornare.
+					Curabitur faucibus ornare ipsum sit amet rhoncus. Praesent egestas tincidunt diam eu pretium. Mauris tempus ut
+					odio pretium rutrum. Sed et eros orci. Etiam varius luctus eros ut venenatis. Maecenas elit tellus, sodales
+					eget sem sed, eleifend posuere risus. Curabitur ipsum dolor, vulputate non sodales et, elementum nec mauris.
+					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
+					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
+
+				<div class="gallery">
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/dataset_view_4.png"><img class="gallery1" id="function_candidates_1" src="img/isoprofiler/dataset_view_4.png" alt="" /></a>
+				</div>
+
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis lacus consectetur, feugiat tortor et,
+					condimentum nisl. Vestibulum pellentesque mauris non neque consequat, sit amet imperdiet metus rhoncus.
+					Morbi sit amet nisi vestibulum, laoreet est vel, pharetra purus.</p>
+
+				<div class="gallery">
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/isoforms_view_no_margins.png"><img class="gallery1" id="function_candidates_1" src="img/isoprofiler/isoforms_view_no_margins.png" alt="" /></a>
+				</div>
+
+
+
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis lacus consectetur, feugiat tortor et,
+					condimentum nisl. Vestibulum pellentesque mauris non neque consequat, sit amet imperdiet metus rhoncus.
+					Morbi sit amet nisi vestibulum, laoreet est vel, pharetra purus. Vestibulum fringilla aliquam ante ac ornare.
+					Curabitur faucibus ornare ipsum sit amet rhoncus. Praesent egestas tincidunt diam eu pretium. Mauris tempus ut
+					odio pretium rutrum. Sed et eros orci. Etiam varius luctus eros ut venenatis. Maecenas elit tellus, sodales
+					eget sem sed, eleifend posuere risus. Curabitur ipsum dolor, vulputate non sodales et, elementum nec mauris.
+					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
+					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
 
 				<h2>FINAL RESULT</h2>
 
@@ -179,6 +215,10 @@
 					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/A4%204x8%20grid%206.png"><img class="gallery2 right_image with_border" id="function_candidates_1" src="img/isoprofiler/A4%204x8%20grid%206.png" alt="" /></a>
 				</div>
 
+				<div class="gallery">
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/filters.png"><img class="gallery1" id="function_candidates_1" src="img/isoprofiler/filters.png" alt="" /></a>
+				</div>
+
 				<h2>CONCLUSIONS</h2>
 
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis lacus consectetur, feugiat tortor et,
@@ -190,9 +230,10 @@
 					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
 					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
 
-				<!--<div class="gallery">-->
-				<!--<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/function_candidates/1.png"><img class="gallery1" id="function_candidates_1" src="img/function_candidates/1.png" alt="" /></a>-->
-				<!--</div>-->
+				<div class="gallery">
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/final_mockup.png"><img class="gallery1" id="function_candidates_1" src="img/isoprofiler/final_mockup.png" alt="" /></a>
+				</div>
+
 
 				<div id="disqus_thread"></div>
 				<script>
