isoprofiler - pictures added

--- a/isoprofiler.html
+++ b/isoprofiler.html
@@ -125,9 +125,9 @@
 					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
 					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
 
-				<!--<div class="gallery">-->
-				<!--<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/function_candidates/1.png"><img class="gallery1" id="function_candidates_1" src="img/function_candidates/1.png" alt="" /></a>-->
-				<!--</div>-->
+				<div class="gallery">
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/Screen%20Shot%202016-04-07%20at%204.13.21%20PM.png"><img class="gallery1" id="function_candidates_1" src="img/isoprofiler/Screen%20Shot%202016-04-07%20at%204.13.21%20PM.png" alt="" /></a>
+				</div>
 
 				<h2>RESEARCH</h2>
 
