isoprofiler - started to write the content

--- a/isoprofiler.html
+++ b/isoprofiler.html
@@ -101,33 +101,28 @@
 
 				<h2>THE NEED</h2>
 
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis lacus consectetur, feugiat tortor et,
-					condimentum nisl. Vestibulum pellentesque mauris non neque consequat, sit amet imperdiet metus rhoncus.
-					Morbi sit amet nisi vestibulum, laoreet est vel, pharetra purus. Vestibulum fringilla aliquam ante ac ornare.
-					Curabitur faucibus ornare ipsum sit amet rhoncus. Praesent egestas tincidunt diam eu pretium. Mauris tempus ut
-					odio pretium rutrum. Sed et eros orci. Etiam varius luctus eros ut venenatis. Maecenas elit tellus, sodales
-					eget sem sed, eleifend posuere risus. Curabitur ipsum dolor, vulputate non sodales et, elementum nec mauris.
-					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
-					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
+				<p>When I got involved in this project, a beta version had already been released and the feedback received
+				from the early adopters was not great, both in terms of functionality and usability.
+					The plan was to analyze the findings and come up with an improved design to take care of the shortcomings of
+				the first prototype.</p>
 
-                <!--<div class="gallery">-->
-				    <!--<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/function_candidates/1.png"><img class="gallery1" id="function_candidates_1" src="img/function_candidates/1.png" alt="" /></a>-->
-                <!--</div>-->
+				<p>The primary need was way for scientists analyze RNA-Seq experiments in order to find interesting isoforms,
+				along with their involvement in various diseases and biological functions, all backed by published evidence.</p>
 
 				<h2>PREVIOUS BETA VERSION</h2>
 
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis lacus consectetur, feugiat tortor et,
-					condimentum nisl. Vestibulum pellentesque mauris non neque consequat, sit amet imperdiet metus rhoncus.
-					Morbi sit amet nisi vestibulum, laoreet est vel, pharetra purus. Vestibulum fringilla aliquam ante ac ornare.
-					Curabitur faucibus ornare ipsum sit amet rhoncus. Praesent egestas tincidunt diam eu pretium. Mauris tempus ut
-					odio pretium rutrum. Sed et eros orci. Etiam varius luctus eros ut venenatis. Maecenas elit tellus, sodales
-					eget sem sed, eleifend posuere risus. Curabitur ipsum dolor, vulputate non sodales et, elementum nec mauris.
-					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
-					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
+				<p>The prototype released as a beta version had already done the heavy lifting in terms of converting the
+				datasets to the right format, creating the data structures, analyzing the data and finding the evindence from a large
+				knowledge base of manually curated content.</p>
 
 				<div class="gallery">
 					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/Screen%20Shot%202016-04-07%20at%204.13.21%20PM.png"><img class="gallery1" id="function_candidates_1" src="img/isoprofiler/Screen%20Shot%202016-04-07%20at%204.13.21%20PM.png" alt="" /></a>
 				</div>
+
+				<p>The major issue was the presentation of the results that was done by the way of a huge filterable table with
+					a two level hierarchy. More than that, a large part of the input data couldn't be analyzed because by that
+					point not a lot had been published on isoforms, so it was left out from the results, creating confusion
+					and indignation for the users.</p>
 
 				<h2>RESEARCH</h2>
 
