isoprofiler - continued to write the content

--- a/isoprofiler.html
+++ b/isoprofiler.html
@@ -126,14 +126,29 @@
 
 				<h2>RESEARCH</h2>
 
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis lacus consectetur, feugiat tortor et,
-					condimentum nisl. Vestibulum pellentesque mauris non neque consequat, sit amet imperdiet metus rhoncus.
-					Morbi sit amet nisi vestibulum, laoreet est vel, pharetra purus. Vestibulum fringilla aliquam ante ac ornare.
-					Curabitur faucibus ornare ipsum sit amet rhoncus. Praesent egestas tincidunt diam eu pretium. Mauris tempus ut
-					odio pretium rutrum. Sed et eros orci. Etiam varius luctus eros ut venenatis. Maecenas elit tellus, sodales
-					eget sem sed, eleifend posuere risus. Curabitur ipsum dolor, vulputate non sodales et, elementum nec mauris.
-					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
-					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
+				<p>Since I was not familiar with the biological context around the new feature, I had to do a lot of research to
+				truly understand what isoforms are, how they are measured, the limitations of the current technologies and the
+				challenges scientists face when dealing with the new type of experiment data. This gave me a pretty good idea
+				on the tools and processes, as well as the terminology and the visual language used in the filed.</p>
+
+				<p>Having done the research, I was ready to review the user interviews done on the beta release. Luckily, I had recordings of
+				three participants who offered a lot of good feedback that allowed me to identify the main pain points
+					and some interesting new opportunities.</p>
+
+				<p>The main takaways were:
+
+				<ul class="article_list">
+					<li>focus needs to be on the isoform expression data instead of the little literature evidence
+						available</li>
+					<li>the large volumes of data are hard to digest and a drill down approach is preferable</li>
+					<li>there are very specific data patterns of interest</li>
+				</ul>
+				</p>
+
+				<h2>VISUAL ISOFORM REPRESENTATION</h2>
+
+				<p>In order to make the interesting expression data patterns easy to spot, I took a more visual approach
+				and experimented with multiple ways of displaying quantitative data</p>
 
 				<div class="gallery">
 					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/A4%204x8%20grid%201.png"><img class="gallery4 left_image with_border" id="function_candidates_1" src="img/isoprofiler/A4%204x8%20grid%201.png" alt="" /></a>
@@ -142,17 +157,8 @@
 					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/A4%204x8%20grid%204.png"><img class="gallery4 right_image with_border" id="function_candidates_1" src="img/isoprofiler/A4%204x8%20grid%204.png" alt="" /></a>
 				</div>
 
-
-				<h2>VISUAL ISOFORM REPRESENTATION</h2>
-
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis lacus consectetur, feugiat tortor et,
-					condimentum nisl. Vestibulum pellentesque mauris non neque consequat, sit amet imperdiet metus rhoncus.
-					Morbi sit amet nisi vestibulum, laoreet est vel, pharetra purus. Vestibulum fringilla aliquam ante ac ornare.
-					Curabitur faucibus ornare ipsum sit amet rhoncus. Praesent egestas tincidunt diam eu pretium. Mauris tempus ut
-					odio pretium rutrum. Sed et eros orci. Etiam varius luctus eros ut venenatis. Maecenas elit tellus, sodales
-					eget sem sed, eleifend posuere risus. Curabitur ipsum dolor, vulputate non sodales et, elementum nec mauris.
-					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
-					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
+				<p>The solution needed to work for singular experiments, as well as for multiple experiments that were
+					being analyzed side by side.</p>
 
 				<div class="gallery">
 					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/dataset_view_1.png"><img class="gallery2 left_image" id="function_candidates_1" src="img/isoprofiler/dataset_view_1.png" alt="" /></a>
@@ -224,6 +230,9 @@
 					eget sem sed, eleifend posuere risus. Curabitur ipsum dolor, vulputate non sodales et, elementum nec mauris.
 					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
 					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
+
+				"It is totally coming together, and customers will really like it!
+				I LOVE the way it updates in real time (the 3 more, 2 more etc.) on the isoform circles column as you drag it wider. That is awesome! The up/down filter works great, immediately able to find interesting genes. Seeing this in action rather than as mockups is fantastic. We are definitely creating a unique tool that will address unmet RNA-seq needs."
 
 				<div class="gallery">
 					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/final_mockup.png"><img class="gallery1" id="function_candidates_1" src="img/isoprofiler/final_mockup.png" alt="" /></a>
