isoprofiler - final piece of content

--- a/isoprofiler.html
+++ b/isoprofiler.html
@@ -148,7 +148,7 @@
 				<h2>VISUAL ISOFORM REPRESENTATION</h2>
 
 				<p>In order to make the interesting expression data patterns easy to spot, I took a more visual approach
-				and experimented with multiple ways of displaying quantitative data</p>
+				and experimented with multiple ways of displaying quantitative data.</p>
 
 				<div class="gallery">
 					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/A4%204x8%20grid%201.png"><img class="gallery4 left_image with_border" id="function_candidates_1" src="img/isoprofiler/A4%204x8%20grid%201.png" alt="" /></a>
@@ -157,8 +157,10 @@
 					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/A4%204x8%20grid%204.png"><img class="gallery4 right_image with_border" id="function_candidates_1" src="img/isoprofiler/A4%204x8%20grid%204.png" alt="" /></a>
 				</div>
 
+				<h3>Molecules view</h3>
+
 				<p>The solution needed to work for singular experiments, as well as for multiple experiments that were
-					being analyzed side by side.</p>
+					being analyzed side by side. That is the reason why all the following mockups have both single and multiple datasets.</p>
 
 				<div class="gallery">
 					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/dataset_view_1.png"><img class="gallery2 left_image" id="function_candidates_1" src="img/isoprofiler/dataset_view_1.png" alt="" /></a>
@@ -168,48 +170,44 @@
 					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/dataset_view_5.png"><img class="gallery2 right_image" id="function_candidates_1" src="img/isoprofiler/dataset_view_5.png" alt="" /></a>
 				</div>
 
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis lacus consectetur, feugiat tortor et,
-					condimentum nisl. Vestibulum pellentesque mauris non neque consequat, sit amet imperdiet metus rhoncus.
-					Morbi sit amet nisi vestibulum, laoreet est vel, pharetra purus. Vestibulum fringilla aliquam ante ac ornare.
-					Curabitur faucibus ornare ipsum sit amet rhoncus. Praesent egestas tincidunt diam eu pretium. Mauris tempus ut
-					odio pretium rutrum. Sed et eros orci. Etiam varius luctus eros ut venenatis. Maecenas elit tellus, sodales
-					eget sem sed, eleifend posuere risus. Curabitur ipsum dolor, vulputate non sodales et, elementum nec mauris.
-					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
-					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
+				<p>All the above ideas were discussed and ultimately abandoned for various reasons. The version that
+					survived and made it in the final product is based on colored circles of proportional size and color.
+					This worked best because it was the most scalable of the approaches. The design needed to scale both
+					horizontally and vertically in order to accommodate tens of isoforms of the same molecule and up to 20
+					experiment conditions.</p>
 
 				<div class="gallery">
 					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/dataset_view_4.png"><img class="gallery1" id="function_candidates_1" src="img/isoprofiler/dataset_view_4.png" alt="" /></a>
 				</div>
 
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis lacus consectetur, feugiat tortor et,
-					condimentum nisl. Vestibulum pellentesque mauris non neque consequat, sit amet imperdiet metus rhoncus.
-					Morbi sit amet nisi vestibulum, laoreet est vel, pharetra purus.</p>
+				<h3>Isoforms view</h3>
+
+				<p>Once an interesting molecule has been identified in the molecules view, it can be explored in more
+					detail in the isoforms view. This table offers precise information about expression measurements,
+					various annotations and a visualization to help the user make sense of the data easier and also observe
+				    interesting trends.
+				</p>
 
 				<div class="gallery">
 					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/isoforms_view_no_margins.png"><img class="gallery1" id="function_candidates_1" src="img/isoprofiler/isoforms_view_no_margins.png" alt="" /></a>
 				</div>
 
 
+				<p>The first version uses a line chart that makes it easy to notice patterns like isoform switching, a
+                    pattern highly demanded by beta testers. The other two versions use a stacked approach that has the
+                    advantage of being an additive representation and variations of the overall molecule expression can
+                    be tracked along variations of the individual isoforms.</p>
 
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis lacus consectetur, feugiat tortor et,
-					condimentum nisl. Vestibulum pellentesque mauris non neque consequat, sit amet imperdiet metus rhoncus.
-					Morbi sit amet nisi vestibulum, laoreet est vel, pharetra purus. Vestibulum fringilla aliquam ante ac ornare.
-					Curabitur faucibus ornare ipsum sit amet rhoncus. Praesent egestas tincidunt diam eu pretium. Mauris tempus ut
-					odio pretium rutrum. Sed et eros orci. Etiam varius luctus eros ut venenatis. Maecenas elit tellus, sodales
-					eget sem sed, eleifend posuere risus. Curabitur ipsum dolor, vulputate non sodales et, elementum nec mauris.
-					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
-					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
+                <p>We decided to go with the first version because it was the more recognizable visualization, made patterns
+					easier to notice and needed less vertical space, which turned out to be very important because it competed
+					with two potentially large tables.</p>
 
-				<h2>FINAL RESULT</h2>
+				<h2>THE FILTERS</h2>
 
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis lacus consectetur, feugiat tortor et,
-					condimentum nisl. Vestibulum pellentesque mauris non neque consequat, sit amet imperdiet metus rhoncus.
-					Morbi sit amet nisi vestibulum, laoreet est vel, pharetra purus. Vestibulum fringilla aliquam ante ac ornare.
-					Curabitur faucibus ornare ipsum sit amet rhoncus. Praesent egestas tincidunt diam eu pretium. Mauris tempus ut
-					odio pretium rutrum. Sed et eros orci. Etiam varius luctus eros ut venenatis. Maecenas elit tellus, sodales
-					eget sem sed, eleifend posuere risus. Curabitur ipsum dolor, vulputate non sodales et, elementum nec mauris.
-					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
-					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
+				<p>Even though the molecules table design was improved to make data easier to consume, it was still hard
+					to navigate a space of thousands of molecules, looking for patterns. Filters were also available in
+					the beta version, but I decided to move away from the table column filters in order to be able to use
+				 criteria across multiple properties and to have the filters always visible.</p>
 
 				<div class="gallery">
 					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/A4%204x8%20grid%205.png"><img class="gallery2 left_image with_border" id="function_candidates_1" src="img/isoprofiler/A4%204x8%20grid%205.png" alt="" /></a>
@@ -222,21 +220,40 @@
 
 				<h2>CONCLUSIONS</h2>
 
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis lacus consectetur, feugiat tortor et,
-					condimentum nisl. Vestibulum pellentesque mauris non neque consequat, sit amet imperdiet metus rhoncus.
-					Morbi sit amet nisi vestibulum, laoreet est vel, pharetra purus. Vestibulum fringilla aliquam ante ac ornare.
-					Curabitur faucibus ornare ipsum sit amet rhoncus. Praesent egestas tincidunt diam eu pretium. Mauris tempus ut
-					odio pretium rutrum. Sed et eros orci. Etiam varius luctus eros ut venenatis. Maecenas elit tellus, sodales
-					eget sem sed, eleifend posuere risus. Curabitur ipsum dolor, vulputate non sodales et, elementum nec mauris.
-					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
-					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
+				<p>The revised version project lasted for about three months and I was involved mostly in the design,
+					but also some of the implementation around datasets, filters and table visualizations.</p>
 
-				"It is totally coming together, and customers will really like it!
-				I LOVE the way it updates in real time (the 3 more, 2 more etc.) on the isoform circles column as you drag it wider. That is awesome! The up/down filter works great, immediately able to find interesting genes. Seeing this in action rather than as mockups is fantastic. We are definitely creating a unique tool that will address unmet RNA-seq needs."
+				<p>The beta version was very valuable because it offered us a way to get
+				very important feedback. Usually, the prototype is a lot more cheaper and faster to build, but in some cases,
+				it is very hard to get a genuine reaction without using real data, especially when you are dealing with large
+				amounts of novel data that people don't yet know how to use.</p>
 
 				<div class="gallery">
 					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/final_mockup.png"><img class="gallery1" id="function_candidates_1" src="img/isoprofiler/final_mockup.png" alt="" /></a>
 				</div>
+
+				<p>User testing was done mostly on the artistic mockups and it involved presenting multiple scenarios to
+					the beta testers that were already familiar with the beta version. The feedback was very positive since we
+				were addressing a lot of the issues reported by the same people.</p>
+
+				<p>Here are some quotes from both management and beta testers during the design and development of the tool.
+				Unfortunately I did not stick around long enough to have gather some feedback after the release.</p>
+
+				<p class="pullquote-wide">"It is totally coming together, and customers will really like it! I love the way it
+					updates in real time (the 3 more, 2 more etc.) on the isoform circles column as you drag it wider.
+					That is awesome! The up/down filter works great, immediately able to find interesting genes.
+					Seeing this in action rather than as mockups is fantastic. We are definitely creating a unique tool that
+					will address unmet RNA-seq needs."</p>
+
+				<p class="pullquote-wide">"That is absolutely awesome. This is so much better than how the list was before,
+					where you had like the whole list of isoforms and rather breaking it down by gene, and then how you
+					are showing the isoforms with the circles, I like that a lot, that's a lot more user friendly."</p>
+
+				<p class="pullquote-wide">"It is fantastic, it is way far above and beyond the improvements I thought you
+					guys were making. We needed like a summary page, It needed to be more user friendly and this setup
+					that you have is really good, I like it."</p>
+
+
 
 
 				<div id="disqus_thread"></div>
