parkingplus - added more images

--- a/parking_plus.html
+++ b/parking_plus.html
@@ -112,10 +112,6 @@
 					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
 					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
 
-                <!--<div class="gallery">-->
-				    <!--<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/function_candidates/1.png"><img class="gallery1" id="function_candidates_1" src="img/function_candidates/1.png" alt="" /></a>-->
-                <!--</div>-->
-
 				<h2>COMPETITIVE ANALYSIS</h2>
 
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis lacus consectetur, feugiat tortor et,
@@ -127,9 +123,26 @@
 					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
 					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
 
-				<!--<div class="gallery">-->
-				<!--<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/function_candidates/1.png"><img class="gallery1" id="function_candidates_1" src="img/function_candidates/1.png" alt="" /></a>-->
-				<!--</div>-->
+				<div class="gallery">
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/parkingplus/competitive_analysis_small.png"><img class="gallery1" id="function_candidates_1" src="img/parkingplus/competitive_analysis_small.png" alt="" /></a>
+				</div>
+
+				<h2>STORYBOARDS</h2>
+
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis lacus consectetur, feugiat tortor et,
+					condimentum nisl. Vestibulum pellentesque mauris non neque consequat, sit amet imperdiet metus rhoncus.
+					Morbi sit amet nisi vestibulum, laoreet est vel, pharetra purus. Vestibulum fringilla aliquam ante ac ornare.
+					Curabitur faucibus ornare ipsum sit amet rhoncus. Praesent egestas tincidunt diam eu pretium. Mauris tempus ut
+					odio pretium rutrum. Sed et eros orci. Etiam varius luctus eros ut venenatis. Maecenas elit tellus, sodales
+					eget sem sed, eleifend posuere risus. Curabitur ipsum dolor, vulputate non sodales et, elementum nec mauris.
+					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
+					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
+
+				<div class="gallery">
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/parkingplus/storyboard1.png"><img class="gallery1" id="function_candidates_1" src="img/parkingplus/storyboard1.png" alt="" /></a>
+					<p class="gallery_separator"></p>
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/parkingplus/storyboard2.png"><img class="gallery1" id="function_candidates_1" src="img/parkingplus/storyboard2.png" alt="" /></a>
+				</div>
 
 				<h2>THE MOBILE APP</h2>
 
@@ -141,6 +154,10 @@
 					eget sem sed, eleifend posuere risus. Curabitur ipsum dolor, vulputate non sodales et, elementum nec mauris.
 					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
 					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
+
+				<h3>Hand drawn mockups</h3>
+				<h3>Android mobile screens</h3>
+				<h3>Animations</h3>
 
 				<div class="gallery">
 					<div class="gallery2 left_image with_border">
