parkingplus - added more images

--- a/parking_plus.html
+++ b/parking_plus.html
@@ -156,7 +156,20 @@
 					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
 
 				<h3>Hand drawn mockups</h3>
+
+				<div class="gallery">
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/parkingplus/A4%204x8%20grid1.png"><img class="gallery2 left_image with_border" id="function_candidates_1" src="img/parkingplus/A4%204x8%20grid1.png" alt="" /></a>
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/parkingplus/A4%204x8%20grid2.png"><img class="gallery2 right_image with_border" id="function_candidates_1" src="img/parkingplus/A4%204x8%20grid2.png" alt="" /></a>
+				</div>
+
 				<h3>Android mobile screens</h3>
+
+				<div class="gallery">
+					<a class="fancybox" rel="group" title="sadfasdf" href="img/parkingplus/1.map.png"><img class="gallery3 left_image with_border" id="function_candidates_1" src="img/parkingplus/1.map.png" alt="" /></a>
+					<a class="fancybox" rel="group" title="sadfasdf" href="img/parkingplus/2.private%20parking.png"><img class="gallery3 center_image with_border" id="function_candidates_1" src="img/parkingplus/2.private%20parking.png" alt="" /></a>
+					<a class="fancybox" rel="group" title="sadfasdf" href="img/parkingplus/3.payments.png"><img class="gallery3 right_image with_border" id="function_candidates_1" src="img/parkingplus/3.payments.png" alt="" /></a>
+				</div>
+
 				<h3>Animations</h3>
 
 				<div class="gallery">
@@ -217,6 +230,19 @@
 				<div class="gallery">
 				<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/parkingplus/admin_dashboard_sketch_1.png"><img class="gallery2 left_image with_border" id="function_candidates_1" src="img/parkingplus/admin_dashboard_sketch_1.png" alt="" /></a>
 				<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/parkingplus/admin_dashboard_sketch_2.png"><img class="gallery2 right_image with_border" id="function_candidates_1" src="img/parkingplus/admin_dashboard_sketch_2.png" alt="" /></a>
+				</div>
+
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis lacus consectetur, feugiat tortor et,
+					condimentum nisl. Vestibulum pellentesque mauris non neque consequat, sit amet imperdiet metus rhoncus.
+					Morbi sit amet nisi vestibulum, laoreet est vel, pharetra purus. Vestibulum fringilla aliquam ante ac ornare.
+					Curabitur faucibus ornare ipsum sit amet rhoncus. Praesent egestas tincidunt diam eu pretium. Mauris tempus ut
+					odio pretium rutrum. Sed et eros orci. Etiam varius luctus eros ut venenatis. Maecenas elit tellus, sodales
+					eget sem sed, eleifend posuere risus. Curabitur ipsum dolor, vulputate non sodales et, elementum nec mauris.
+					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
+					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
+
+				<div class="gallery">
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/parkingplus/admin_dashboard.png"><img class="gallery1" id="function_candidates_1" src="img/parkingplus/admin_dashboard.png" alt="" /></a>
 				</div>
 
 				<h2>MARKETING MATERIALS</h2>
