parkingplus - added more images

--- a/parking_plus.html
+++ b/parking_plus.html
@@ -263,6 +263,16 @@
 				</div>
 
 				<div class="gallery">
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/parkingplus/catalog%201.png"><img class="gallery3 left_image with_border" id="function_candidates_1" src="img/parkingplus/catalog%201.png" alt="" /></a>
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/parkingplus/catalog%201.png"><img class="gallery3 center_image with_border" id="function_candidates_1" src="img/parkingplus/catalog%201.png" alt="" /></a>
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/parkingplus/catalog%201.png"><img class="gallery3 right_image with_border" id="function_candidates_1" src="img/parkingplus/catalog%201.png" alt="" /></a>
+				</div>
+
+				<div class="gallery">
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/parkingplus/flyer.png"><img class="gallery1 with_border" id="function_candidates_1" src="img/parkingplus/flyer.png" alt="" /></a>
+				</div>
+
+				<div class="gallery">
 					<video preload="metadata" controls class="gallery1">
 						<source src="img/parkingplus/video/explainer%20video.mp4" type="video/mp4">
 					</video>
